--- a/src/app/events/event-detail/event-detail.component.html
+++ b/src/app/events/event-detail/event-detail.component.html
@@ -1,3 +1,18 @@
-<p>
-  event-detail works!
-</p>
+<div class="container">
+  <div id="event-card-details">
+    <mat-card *ngIf="event">
+      <mat-card-header>
+        <mat-card-title>
+          <h3>{{ event.title | uppercase }}</h3>
+        </mat-card-title>
+        <mat-card-subtitle>
+          <p>{{ event.location }} - {{ event.date | date: "dd/MM/yyyy" }}</p>
+        </mat-card-subtitle>
+      </mat-card-header>
+
+      <mat-card-content>
+        <p>{{ event.description }}</p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
