Enabling the creation and edition of events

--- a/src/app/events/event-detail/event-detail.component.html
+++ b/src/app/events/event-detail/event-detail.component.html
@@ -10,6 +10,13 @@
             (click)="deleteEvent(event)">
             Delete Event
           </button>
+
+          <button
+            mat-raised-button
+            color="primary"
+            [routerLink]="['/eventForm/', event.id]">
+            Edit Event
+         </button>
         </div>
     <mat-card *ngIf="event">
       <mat-card-header>
