--- a/src/app/profile/profile-detail/profile-detail.component.html
+++ b/src/app/profile/profile-detail/profile-detail.component.html
@@ -1,3 +1,13 @@
-<p>
-  profile-detail works!
-</p>
+<div class="container">
+    <div>
+      <div>
+        <h4>ID: </h4>
+        <span> {{user.id}}</span>
+      </div>
+  
+      <div>
+        <h4>Email: </h4>
+        <span> {{user.email}}</span>
+      </div>
+    </div>
+  </div>
