--- a/src/app/login/signup-form/signup-form.component.html
+++ b/src/app/login/signup-form/signup-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>Signup</h2>
+    <h1>Signup</h1>
   
     <form novalidate [formGroup]="signupForm" #fform="ngForm" (ngSubmit)="onSubmit()">
       <mat-form-field>
@@ -7,12 +7,12 @@
       </mat-form-field>
       <mat-form-field>
         <input matInput placeholder="Password" type="password" formControlName="password" />
-      </mat-form-field>
+      </mat-form-field>  
   
       <div>
-        <div>Already have an account? <a routerLink="/login">Sign in</a></div>
+        <div>Already have an account? <a routerLink="/login">Login</a></div>
         <button mat-raised-button color="primary" type="submit">
-          Signin
+          Signup
         </button>
       </div>
     </form>
