Showing the buttons only when user is the owner

--- a/src/app/events/event-detail/event-detail.component.html
+++ b/src/app/events/event-detail/event-detail.component.html
@@ -5,7 +5,7 @@
 
   <div *ngIf="event">
     <div>
-      <div *ngIf="userService.checkUser()">
+      <div *ngIf="isOwner(event)">
           <button
             mat-raised-button
             color="warn"
