Adding owner in event card

--- a/src/app/events/event-detail/event-detail.component.html
+++ b/src/app/events/event-detail/event-detail.component.html
@@ -28,6 +28,9 @@
           <mat-card-subtitle>
             <p>{{ event.location }} - {{ event.date | date: "dd/MM/yyyy" }}</p>
           </mat-card-subtitle>
+          <mat-card-subtitle>
+              <p>{{ event.addedBy}}</p>
+          </mat-card-subtitle>  
         </mat-card-header>
 
         <mat-card-content>
