--- a/src/app/events/event-form/event-form.component.html
+++ b/src/app/events/event-form/event-form.component.html
@@ -3,7 +3,7 @@
     <form
       novalidate
       [formGroup]="addEditForm"
-      #fform="ngForm"
+      #form="ngForm"
       (ngSubmit)="onSubmit()"
       *ngIf="addEditForm"
     >
