--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">
-    <a mat-button routerLink="/home" routerLinkActive="activeLink">Home</a>
-    <a mat-button routerLink="/events" routerLinkActive="activeLink">Events</a>
-    <a *ngIf="isAuthenticated" mat-button routerLink="/profile" routerLinkActive="activeLink">{{user.email}}</a>
-    <a *ngIf="!isAuthenticated" mat-button routerLink="/login" routerLinkActive="activeLink">Login</a>
+<mat-toolbar class="toolbar" color="primary">
+    <a class="option" mat-raised-button routerLink="/home" routerLinkActive="activeLink">Home</a>
+    <a class="option" mat-raised-button routerLink="/events" routerLinkActive="activeLink">Events</a>
+    <a class="option" mat-raised-button *ngIf="isAuthenticated" routerLink="/profile" routerLinkActive="activeLink">{{user.email}}</a>
+    <a class="option" mat-raised-button *ngIf="!isAuthenticated" routerLink="/login" routerLinkActive="activeLink">Login</a>
 </mat-toolbar>
