--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,15 @@
+@import './shared/styles/variables';
+
+
 .container {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.content {
+  height: calc(100% - 64px);
+
+  @media(max-width: $screen-sm) {
+    height: calc(100% - 56px);
   }
-  
-  .content {
-    height: calc(100% - 64px);
-  }
-  
+}
