--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,21 @@
 <div class="container">
-    <div>
-        <h1>Home Page</h1>
+    <div class="logo">
+      <img src="assets/imgs/logo_open_eng.png" alt="Logo Accenture Custom Software Engineering">
+    </div>
+  
+    <div class="title">
+      <h1>Open Events</h1>
+    </div>
+  
+    <div class="subtitle">
+      <h2>All our events</h2>
+    </div>
+  
+    <div class="message">
+      <p>
+        A new and fresh application to host all our tech events crafted from
+        Accenture Openathons
+      </p>
     </div>
 </div>
+  
