--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -1,30 +1,34 @@
 <div class="container">
-    <h1>Login</h1>
+    <div class="section-title">
+      <h1>Login</h1>
+    </div>
 
-    <form novalidate [formGroup]="loginForm" #fform="ngForm" (ngSubmit)="onSubmit()">
-      <mat-form-field>
-        <input matInput placeholder="Email" type="text" formControlName="email" />
-        <mat-error *ngIf="loginForm.get('email').errors && loginForm.get('email').touched">
-          {{validateFormService.getError('email', loginForm.get('email'))}}
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="Password" type="password" formControlName="password" />
-        <mat-error *ngIf="loginForm.get('password').errors && loginForm.get('password').touched">
-          {{validateFormService.getError('password', loginForm.get('password'))}}
-        </mat-error>
-      </mat-form-field>
+    <div class="form">
+      <form class="form-login" novalidate [formGroup]="loginForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+        <mat-form-field>
+          <input matInput placeholder="Email" type="text" formControlName="email" />
+          <mat-error *ngIf="loginForm.get('email').errors && loginForm.get('email').touched">
+            {{validateFormService.getError('email', loginForm.get('email'))}}
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Password" type="password" formControlName="password" />
+          <mat-error *ngIf="loginForm.get('password').errors && loginForm.get('password').touched">
+            {{validateFormService.getError('password', loginForm.get('password'))}}
+          </mat-error>
+        </mat-form-field>
 
-      <div *ngIf="msgs" class="msgs">
-        {{msgs}} <!-- Data binding for messages -->
-      </div>
+        <div *ngIf="msgs" class="msgs">
+          {{msgs}} <!-- Data binding for messages -->
+        </div>
 
-      <div>
-        <div>Need an account? <a routerLink="/signup">Signup</a></div>
-        <button [disabled]="!loginForm.valid || loginForm.pristine"
-          mat-raised-button color="primary" type="submit">
-          Login
-        </button>
-      </div>
-    </form>
+        <div class="login-btn">
+          <div class="sign-up">Need an account? <a routerLink="/signup">Signup</a></div>
+          <button [disabled]="!loginForm.valid || loginForm.pristine"
+            mat-raised-button color="primary" type="submit">
+            Login
+          </button>
+        </div>
+      </form>
+    </div>
   </div>
