--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,5 @@
-<p>
-  page-not-found works!
-</p>
+<div class="container">
+    <div class="section-title">
+        <h1>Page not found</h1>
+    </div>
+</div>
