--- a/src/app/signup/signup-form/signup-form.component.html
+++ b/src/app/signup/signup-form/signup-form.component.html
@@ -1,26 +1,30 @@
 <div class="container">
-    <h1>Signup</h1>
+    <div class="section-title">
+      <h1>Signup</h1>
+    </div>
 
-    <form novalidate [formGroup]="signupForm" #fform="ngForm" (ngSubmit)="onSubmit()">
-      <mat-form-field>
-        <input matInput placeholder="Email" type="text" formControlName="email" />
-        <mat-error *ngIf="signupForm.get('email').errors && signupForm.get('email').touched">
-          {{validateFormService.getError('email', signupForm.get('email'))}}
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="Password" type="password" formControlName="password" />
-        <mat-error *ngIf="signupForm.get('password').errors && signupForm.get('password').touched">
-          {{validateFormService.getError('password', signupForm.get('password'))}}
-        </mat-error>
-      </mat-form-field>
+    <div class="form">
+      <form class="form-signup" novalidate [formGroup]="signupForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+        <mat-form-field>
+          <input matInput placeholder="Email" type="text" formControlName="email" />
+          <mat-error *ngIf="signupForm.get('email').errors && signupForm.get('email').touched">
+            {{validateFormService.getError('email', signupForm.get('email'))}}
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Password" type="password" formControlName="password" />
+          <mat-error *ngIf="signupForm.get('password').errors && signupForm.get('password').touched">
+            {{validateFormService.getError('password', signupForm.get('password'))}}
+          </mat-error>
+        </mat-form-field>
 
-      <div>
-        <div>Already have an account? <a routerLink="/login">Login</a></div>
-        <button [disabled]="!signupForm.valid || signupForm.pristine"
-            mat-raised-button color="primary" type="submit">
-          Signup
-        </button>
-      </div>
-    </form>
+        <div class="login-btn">
+          <div class="login">Already have an account? <a routerLink="/login">Login</a></div>
+          <button [disabled]="!signupForm.valid || signupForm.pristine"
+              mat-raised-button color="primary" type="submit">
+            Signup
+          </button>
+        </div>
+      </form>
+    </div>
   </div>
