--- a/src/app/events/event-detail/event-detail.component.html
+++ b/src/app/events/event-detail/event-detail.component.html
@@ -14,6 +14,7 @@
           </button>
 
           <button
+            class="button-edit"
             mat-raised-button
             color="primary"
             [routerLink]="['/eventForm/', event.id]">
@@ -35,7 +36,7 @@
       </mat-card-header>
 
       <div class="img">
-        <img mat-card-image [src]="imageUrl" alt="Photo">
+        <img [src]="imageUrl" alt="Photo">
       </div>
 
       <mat-card-content class="content">
