--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,20 +2,22 @@
     <div class="logo">
       <img src="assets/imgs/logo_open_eng.png" alt="Logo Accenture Custom Software Engineering">
     </div>
-  
-    <div class="title">
-      <h1>Open Events</h1>
+
+    <div class=background-card>
+      <div class="title">
+          <h1>Open Events</h1>
+        </div>
+
+        <div class="subtitle">
+          <h2>All our events</h2>
+        </div>
+
+        <div class="message">
+          <p>
+            A new and fresh application to host all our tech events crafted from
+            Accenture Openathons
+          </p>
+        </div>
     </div>
-  
-    <div class="subtitle">
-      <h2>All our events</h2>
-    </div>
-  
-    <div class="message">
-      <p>
-        A new and fresh application to host all our tech events crafted from
-        Accenture Openathons
-      </p>
-    </div>
+
 </div>
-  
