--- a/src/app/login/login-form/login-form.component.scss
+++ b/src/app/login/login-form/login-form.component.scss
@@ -4,7 +4,7 @@
 
 .container {
   @include container();
-  @include background('/assets/imgs/patt5.png', center, contain);
+  @include background('/assets/imgs/patt5.jpg', center, contain);
   background-size: cover;
 }
 
@@ -14,6 +14,7 @@
 }
 
 .form-login {
+  border-radius: 4px;
   display: flex;
   flex-flow: column;
   width: 40%;
