--- a/src/app/profile/profile-detail/profile-detail.component.scss
+++ b/src/app/profile/profile-detail/profile-detail.component.scss
@@ -3,7 +3,7 @@
 
 .container {
   @include container();
-  @include background('/assets/imgs/patt5.png', center, contain);
+  @include background('/assets/imgs/patt5.jpg', center, contain);
   background-size: cover;
 }
 
@@ -13,9 +13,10 @@
 }
 
 .userData {
-  margin-top: 5rem;
+  margin-bottom: 20px;
   padding: 1rem;
   background-color: rgba(255,255,255,0.9);
+  border-radius: 4px;
 
   h4 {
     display: inline-block;
