adding check for show password, update desing

--- a/src/app/profile/profile-detail/profile-detail.component.scss
+++ b/src/app/profile/profile-detail/profile-detail.component.scss
@@ -17,7 +17,7 @@
   padding: 1rem;
   background-color: rgba(255,255,255,0.9);
   border-radius: 4px;
-
+  min-width: 35%;
   h4 {
     display: inline-block;
   }
