--- a/src/app/events/event-detail/event-detail.component.html
+++ b/src/app/events/event-detail/event-detail.component.html
@@ -39,7 +39,7 @@
         <img [src]="imageUrl" alt="Photo">
       </div>
 
-      <mat-card-content class="content">
+      <mat-card-content class="description">
         <p>{{ event.description }}</p>
       </mat-card-content>
     </mat-card>
