--- a/src/app/events/event-list/event-list.component.html
+++ b/src/app/events/event-list/event-list.component.html
@@ -40,7 +40,7 @@
                   <p>{{ event.addedBy}}</p>
               </mat-card-subtitle>
             </mat-card-header>
-            <mat-card-content class="content">
+            <mat-card-content class="description">
               <p>{{ event.description }}</p>
             </mat-card-content>
         </mat-card>
