adding comments to code

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div class="section-title">
+      <h1>Home</h1>
+    </div>
     <div class="logo">
       <img src="assets/imgs/logo_open_eng.png" alt="Logo Accenture Custom Software Engineering">
     </div>
