--- a/src/app/events/event-form/event-form.component.scss
+++ b/src/app/events/event-form/event-form.component.scss
@@ -22,7 +22,6 @@ form {
   border-radius: 4px;
 }
 
-.save-btn {
-  display: flex;
-  justify-content: flex-end;
+.button {
+  margin-left: 10px;
 }
