Updating button style

--- a/src/app/profile/profile-detail/profile-detail.component.html
+++ b/src/app/profile/profile-detail/profile-detail.component.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="wrap">
-    <button mat-raised-button color="primary" (click)="logout()">
+    <button mat-raised-button color="warn" (click)="logout()">
       Logout
     </button>
   </div>
